[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/PickUps/lemon.png" type="Texture" id=1]
[ext_resource path="res://Assets/PickUps/lemon2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/scripts/PickUp.gd" type="Script" id=3]
[ext_resource path="res://Assets/VFX/SandDissolve/sanddissolve_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/VFX/SandDissolve/sanddissolve_6.png" type="Texture" id=5]
[ext_resource path="res://Assets/VFX/SandDissolve/sanddissolve_7.png" type="Texture" id=6]
[ext_resource path="res://Assets/VFX/SandDissolve/sanddissolve_5.png" type="Texture" id=7]
[ext_resource path="res://Assets/VFX/SandDissolve/sanddissolve_4.png" type="Texture" id=8]
[ext_resource path="res://Assets/VFX/SandDissolve/sanddissolve_3.png" type="Texture" id=9]
[ext_resource path="res://Assets/VFX/SandDissolve/sanddissolve_1.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "glow",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "PickedUpVFX",
"speed": 16.0
} ]

[node name="Lemon" type="Area2D"]
script = ExtResource( 3 )

[node name="PickUpSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "glow"
frame = 1
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PickUpVFX" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2, -18 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "PickedUpVFX"
frame = 3
playing = true

[connection signal="body_entered" from="." to="." method="_on_Lemon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lemon_body_exited"]
