[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/PickUps/sanddollar2.png" type="Texture" id=1]
[ext_resource path="res://Assets/PickUps/sanddollar1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/scripts/PickUp.gd" type="Script" id=3]
[ext_resource path="res://Assets/VFX/SandPour/sandpour4.png" type="Texture" id=4]
[ext_resource path="res://Assets/VFX/SandPour/sandpour1.png" type="Texture" id=5]
[ext_resource path="res://Assets/VFX/SandPour/sandpour2.png" type="Texture" id=6]
[ext_resource path="res://Assets/VFX/SandPour/sandpour5.png" type="Texture" id=7]
[ext_resource path="res://Assets/VFX/SandPour/sandpour6.png" type="Texture" id=8]
[ext_resource path="res://Assets/VFX/SandPour/sandpour3.png" type="Texture" id=9]
[ext_resource path="res://Assets/SFX/Erase Game_Sand_Dollar_Pickup.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "glow",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "PickedUpVFX",
"speed": 16.0
} ]

[node name="SandDollar" type="Area2D"]
position = Vector2( -1, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="PickUpSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "glow"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PickUpVFX" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, 2 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "PickedUpVFX"
frame = 2
playing = true

[node name="pickedUpSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_SandDollar_body_entered"]
